# controllers/carController.js
@@ -7,6 +7,12 @@ export const getCars = async (_, res) => {
 	res.status(200).send(cars)
 }
 
+// Get car with his id
+export const getCar = async (req, res) => {
+	const car = await carModel.find({ _id: req.params.id })
+	res.status(200).send(car)
+}
+
 // Create Car
 export const addCar = async (req, res) => {
 	const car = await carModel(req.body)
@@ -32,6 +38,7 @@ export const deleteCar = async (req, res) => {
 	if (!car) {
 		res.status(404).send('car model unknow')
 	}
+	res.status(200).send(car)
 }
 
 
